force-app/main/default/objects/Account/fields/Activar_flow_para_email__c.field-meta.xml
<CustomField>
    <fullName>Activar_flow_para_email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activar flow para email</label>
    <type>Checkbox</type>
</CustomField>