force-app/main/default/objects/Account/fields/Actividad__c.field-meta.xml
<CustomField>
    <fullName>Actividad__c</fullName>
    <formula>IF(RecordType.Name = &apos;Paciente Regular&apos; || RecordType.Name = &apos;Paciente Best Care&apos; || RecordType.Name = &apos;Paciente Partner&apos;,
IF(RecordType.Name = &apos;Paciente Regular&apos; ,&apos;M1&apos;,
UPPER(Obra_social__pr.Actividad_para_ObraSocial_del__c)) ,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actividad</label>
    <type>Text</type>
</CustomField>