force-app/main/default/objects/Account/fields/Actividad_para_ObraSocial_del__c.field-meta.xml
<CustomField>
    <fullName>Actividad_para_ObraSocial_del__c</fullName>
    <defaultValue>IF($RecordType.Name= &apos;Paciente Regular&apos;, &apos;M1&apos;,&apos;&apos;)</defaultValue>
    <label>Actividad</label>
    <length>50</length>
    <type>Text</type>
</CustomField>