force-app/main/default/objects/Account/fields/Address_3__c.field-meta.xml
<CustomField>
    <fullName>Address_3__c</fullName>
    <label>Address 3</label>
    <length>240</length>
    <type>Text</type>
</CustomField>