force-app/main/default/objects/Account/fields/Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Address_Id__c</fullName>
    <label>Address Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>