force-app/main/default/objects/Account/fields/Alimentacion__c.field-meta.xml
<CustomField>
    <fullName>Alimentacion__c</fullName>
    <description>Es un campo que trae la información del tipo de  Alimentación del último tratamiento</description>
    <label>Alimentación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>