force-app/main/default/objects/Account/fields/Alta_M_dulo__c.field-meta.xml
<CustomField>
    <fullName>Alta_M_dulo__c</fullName>
    <label>Alta Módulo</label>
    <summarizedField>Modulo_de_paciente__c.Modulo_desde__c</summarizedField>
    <summaryForeignKey>Modulo_de_paciente__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>