force-app/main/default/objects/Account/fields/Apellido_oculto__c.field-meta.xml
<CustomField>
    <fullName>Apellido_oculto__c</fullName>
    <label>Apellido</label>
    <length>100</length>
    <type>Text</type>
</CustomField>