force-app/main/default/objects/Account/fields/Area_de_Influencia__c.field-meta.xml
<CustomField>
    <fullName>Area_de_Influencia__c</fullName>
    <label>Área de Influencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nacional</fullName>
            </value>
            <value>
                <fullName>Provincial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>