force-app/main/default/objects/Account/fields/Area_de_Servicio__c.field-meta.xml
<CustomField>
    <fullName>Area_de_Servicio__c</fullName>
    <label>Área de Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HOME CARE</fullName>
            </value>
            <value>
                <fullName>UTI</fullName>
            </value>
            <value>
                <fullName>Servicio de nutrición</fullName>
            </value>
            <value>
                <fullName>Internación</fullName>
            </value>
            <value>
                <fullName>Compras</fullName>
                <label>COMPRAS</label>
            </value>
            <value>
                <fullName>Farmacia</fullName>
                <label>FARMACIA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>