force-app/main/default/objects/Account/fields/Area_terapeutica__c.field-meta.xml
<CustomField>
    <fullName>Area_terapeutica__c</fullName>
    <label>Área terapéutica</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adultos Comunidad</fullName>
            </value>
            <value>
                <fullName>Alergia</fullName>
            </value>
            <value>
                <fullName>Dieta Cetogénica</fullName>
            </value>
            <value>
                <fullName>Farmacia</fullName>
            </value>
            <value>
                <fullName>Institución</fullName>
            </value>
            <value>
                <fullName>Metabólicos</fullName>
            </value>
            <value>
                <fullName>Metabólicos - Dieta Cetogénica</fullName>
            </value>
            <value>
                <fullName>Ministerio</fullName>
            </value>
            <value>
                <fullName>NEG</fullName>
                <label>Nutrición General</label>
            </value>
            <value>
                <fullName>Oncología</fullName>
            </value>
            <value>
                <fullName>Tailored Nutrition</fullName>
            </value>
            <value>
                <fullName>Adultos (UTI-STROKE)</fullName>
            </value>
            <value>
                <fullName>Adultos (Oncologia)</fullName>
            </value>
            <value>
                <fullName>Adultos (IISS + Onco)</fullName>
            </value>
            <value>
                <fullName>Adultos (Instituciones)</fullName>
            </value>
            <value>
                <fullName>Adultos (Comunidad)</fullName>
            </value>
            <value>
                <fullName>Adultos (IISS + Comunidad)</fullName>
            </value>
            <value>
                <fullName>Digestivos</fullName>
            </value>
            <value>
                <fullName>Desafíos del crecimiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>