force-app/main/default/objects/Account/fields/Asunto_de_ultimo_llamado_de_seguimiento__c.field-meta.xml
<CustomField>
    <fullName>Asunto_de_ultimo_llamado_de_seguimiento__c</fullName>
    <label>Asunto de ultimo llamado de seguimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>