force-app/main/default/objects/Account/fields/Bill_to__c.field-meta.xml
<CustomField>
    <fullName>Bill_to__c</fullName>
    <label>Bill to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>