force-app/main/default/objects/Account/fields/Bloqueo__c.field-meta.xml
<CustomField>
    <fullName>Bloqueo__c</fullName>
    <label>Bloqueo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Z2</fullName>
            </value>
            <value>
                <fullName>Vacio</fullName>
                <isActive>false</isActive>
                <label>Vacio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>