force-app/main/default/objects/Account/fields/Canal_cuota__c.field-meta.xml
<CustomField>
    <fullName>Canal_cuota__c</fullName>
    <label>Canal cuota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>