force-app/main/default/objects/Account/fields/Canal_distri__c.field-meta.xml
<CustomField>
    <fullName>Canal_distri__c</fullName>
    <label>Canal distri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>