force-app/main/default/objects/Account/fields/Canal_para_Consumidor_Baby__c.field-meta.xml
<CustomField>
    <fullName>Canal_para_Consumidor_Baby__c</fullName>
    <label>Canal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Almacen</fullName>
            </value>
            <value>
                <fullName>Farmacias</fullName>
            </value>
            <value>
                <fullName>Farmacity</fullName>
            </value>
            <value>
                <fullName>Hipermarket</fullName>
            </value>
            <value>
                <fullName>MercadoLibre</fullName>
            </value>
            <value>
                <fullName>Nutrilon4</fullName>
            </value>
            <value>
                <fullName>Proximity</fullName>
            </value>
            <value>
                <fullName>Simplicity</fullName>
            </value>
            <value>
                <fullName>Supermercado</fullName>
            </value>
            <value>
                <fullName>Vital4</fullName>
            </value>
            <value>
                <fullName>La Sere va a tu casa</fullName>
            </value>
            <value>
                <fullName>Particular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>