force-app/main/default/objects/Account/fields/Canal_preferido_de_contacto__c.field-meta.xml
<CustomField>
    <fullName>Canal_preferido_de_contacto__c</fullName>
    <label>Canal preferido de contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Videollamada</fullName>
            </value>
            <value>
                <fullName>Presencial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>