force-app/main/default/objects/Account/fields/Canal_venta__c.field-meta.xml
<CustomField>
    <fullName>Canal_venta__c</fullName>
    <label>Canal venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>