force-app/main/default/objects/Account/fields/Cantidad_Camas_Piso__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Camas_Piso__c</fullName>
    <label>Cantidad Camas Piso</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>