force-app/main/default/objects/Account/fields/Cantidad_Camas_Piso_con_Sonda__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Camas_Piso_con_Sonda__c</fullName>
    <label>Cantidad Camas Piso con Sonda</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>