force-app/main/default/objects/Account/fields/Cantidad_de_bombas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_bombas__c</fullName>
    <label>Cantidad de bombas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>