force-app/main/default/objects/Account/fields/Cantidad_de_camas_UTI__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_camas_UTI__c</fullName>
    <label>Cantidad de camas UTI</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>