force-app/main/default/objects/Account/fields/Cantidad_de_casos_de_retiro_de_activos__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_casos_de_retiro_de_activos__c</fullName>
    <description>Funciona como rollup para casos con: 
Type = &apos;Gestión&apos;
Subtipo__c = &apos;Retiro de Activos&apos;
Motivo__c = &apos;Alta/Fin de tratamiento&apos; o &apos;Fallecimiento&apos; o &apos;No renueva servicios&apos;
Isclosed = true</description>
    <label>Cantidad de casos de retiro de activos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>