force-app/main/default/objects/Account/fields/Cantidad_de_Instituciones_relacionadas__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Instituciones_relacionadas__c</fullName>
    <label>Cantidad de Instituciones relacionadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>