force-app/main/default/objects/Account/fields/Cantidad_de_modulos_de_paciente__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_modulos_de_paciente__c</fullName>
    <label>Cantidad de módulos de paciente</label>
    <summaryForeignKey>Modulo_de_paciente__c.Cuenta__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>