force-app/main/default/objects/Account/fields/Cantidad_de_tratamientos_Profesional__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_tratamientos_Profesional__c</fullName>
    <label>Cantidad de tratamientos</label>
    <length>10</length>
    <type>Text</type>
</CustomField>