force-app/main/default/objects/Account/fields/Cargado_en_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Cargado_en_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cargado en Oracle</label>
    <type>Checkbox</type>
</CustomField>