force-app/main/default/objects/Account/fields/Cargo_dentro_de_la_institucion__c.field-meta.xml
<CustomField>
    <fullName>Cargo_dentro_de_la_institucion__c</fullName>
    <label>Cargo dentro de la institución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gerente</fullName>
            </value>
            <value>
                <fullName>Jefe</fullName>
            </value>
            <value>
                <fullName>Personal Administrativo</fullName>
            </value>
            <value>
                <fullName>Referente</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>