force-app/main/default/objects/Account/fields/Cargo_organizacional__c.field-meta.xml
<CustomField>
    <fullName>Cargo_organizacional__c</fullName>
    <label>Cargo organizaciónal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jefe de nutrición</fullName>
            </value>
            <value>
                <fullName>Responsable de calidad</fullName>
            </value>
            <value>
                <fullName>Responsable de compras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>