force-app/main/default/objects/Account/fields/Caso_creado__c.field-meta.xml
<CustomField>
    <fullName>Caso_creado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para evitar que se cree un nuevo caso cada vez que se modifique el registro</description>
    <label>Caso creado</label>
    <type>Checkbox</type>
</CustomField>