force-app/main/default/objects/Account/fields/Certificado_de_discapacidad__c.field-meta.xml
<CustomField>
    <fullName>Certificado_de_discapacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificado de discapacidad</label>
    <type>Checkbox</type>
</CustomField>