force-app/main/default/objects/Account/fields/Clase_cliente__c.field-meta.xml
<CustomField>
    <fullName>Clase_cliente__c</fullName>
    <label>Clase cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>