force-app/main/default/objects/Account/fields/Clasificacion_impositiva__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_impositiva__c</fullName>
    <label>Clasificación impositiva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>