force-app/main/default/objects/Account/fields/Cliente_EDI__c.field-meta.xml
<CustomField>
    <fullName>Cliente_EDI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para saber si es cliente EDI</description>
    <label>Cliente EDI</label>
    <type>Checkbox</type>
</CustomField>