force-app/main/default/objects/Account/fields/COBERTURA_DE_PACIENTES_PREDOMINANTE__c.field-meta.xml
<CustomField>
    <fullName>COBERTURA_DE_PACIENTES_PREDOMINANTE__c</fullName>
    <label>Cobertura De Pacientes Predominante</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin Asignar</fullName>
                <default>true</default>
                <label>Sin Asignar</label>
            </value>
            <value>
                <fullName>OOSS Gremiales</fullName>
            </value>
            <value>
                <fullName>Prepagas</fullName>
            </value>
            <value>
                <fullName>Sin Cobertura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>