force-app/main/default/objects/Account/fields/COD_IQVIA__c.field-meta.xml
<CustomField>
    <fullName>COD_IQVIA__c</fullName>
    <label>COD IQVIA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>