force-app/main/default/objects/Account/fields/Codigo_APM__c.field-meta.xml
<CustomField>
    <fullName>Codigo_APM__c</fullName>
    <label>Código APM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>