force-app/main/default/objects/Account/fields/Codigo_Close_Up__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Close_Up__c</fullName>
    <description>Código que tiene registrado el profesional.</description>
    <label>Código Close Up</label>
    <length>255</length>
    <type>Text</type>
</CustomField>