force-app/main/default/objects/Account/fields/Codigo_de_area__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_area__c</fullName>
    <label>Código de área</label>
    <length>9</length>
    <type>Text</type>
</CustomField>