force-app/main/default/objects/Account/fields/Codigo_Postal_localidad__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal_localidad__c</fullName>
    <formula>Localidad_look__r.Codigo_Postal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Codigo Postal</label>
    <type>Text</type>
</CustomField>