force-app/main/default/objects/Account/fields/Codigo_Postal_Secundario__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal_Secundario__c</fullName>
    <label>Código Postal Secundario</label>
    <length>60</length>
    <type>Text</type>
</CustomField>