force-app/main/default/objects/Account/fields/Codigo_postal_service__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal_service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Postal</label>
    <referenceTo>Codigo_Postal__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>