force-app/main/default/objects/Account/fields/COLOR_HCP__c.field-meta.xml
<CustomField>
    <fullName>COLOR_HCP__c</fullName>
    <label>Color HCP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sin Asignar</fullName>
                <default>true</default>
                <label>Sin Asignar</label>
            </value>
            <value>
                <fullName>Rojo</fullName>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Verde</fullName>
            </value>
            <value>
                <fullName>Azul</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>