force-app/main/default/objects/Account/fields/Comentarios_Coordinador__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Coordinador__c</fullName>
    <label>Comentarios Coordinador</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>